NXT-1105: Prevent overflow on linux
NXT-1105 (Handle dynamic port floating menu on canvas edges)

--- a/org.knime.ui.js/assets/index.css
+++ b/org.knime.ui.js/assets/index.css
@@ -6,6 +6,7 @@
 /* prevent "bounce" effect when scrolling with touch pad */
 body {
   overscroll-behavior: none;
+  overflow: hidden;
 }
 
 button {
